--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "faker": "^5.5.3",
     "mocha": "^8.3.2",
     "supertest": "^6.1.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15"
   }
 }
